--- a/style.css
+++ b/style.css
@@ -50,14 +50,22 @@ h1{
     text-align: center;
 }
 
-#container {
-    border-color: #000000;
-    border: 19px;
+#container{
+    
     display: flex;
+    width: 960px;
+    height: 960px;
+    border-color: #000000;
+    border: 1px solid black;
+    padding: 10px;
+    margin: 10px;
+    justify-content: space-evenly;
+
 }
 
-.tile {
+.tile{
   width: 10px;
   background-color: blue;
   border: 4px;
+  display: flex;
 }
