--- a/style.css
+++ b/style.css
@@ -49,7 +49,6 @@ h1{
     background-color: blue;
     text-align: center;
 }
-
 #container{
     
     display: flex;
@@ -62,10 +61,14 @@ h1{
     justify-content: space-evenly;
 
 }
+.row {
+  display: flex;
+  flex-direction: row;
+}
 
 .tile{
   width: 10px;
   background-color: blue;
-  border: 4px;
-  display: flex;
+  border: 1px solid black;
+  margin: 2px;
 }
