--- a/style.css
+++ b/style.css
@@ -59,6 +59,9 @@ h1{
     padding: 10px;
     margin: 10px;
     justify-content: space-evenly;
+    align-content:space-around;
+    flex-direction: column;
+    
 
 }
 .row {
