--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ blockquote,
 dl,
 dd {
   margin: 0;
+  padding: 0;
 }
 
 /* Set core root defaults */
@@ -52,26 +53,24 @@ h1{
 #container{
     
     display: flex;
-    width: 960px;
-    height: 960px;
+    width: 680px;
+    height: 680px;
     border-color: #000000;
     border: 1px solid black;
-    padding: 10px;
-    margin: 10px;
-    justify-content: space-evenly;
-    align-content:space-around;
+    justify-self: center;
     flex-direction: column;
-    
 
 }
 .row {
   display: flex;
   flex-direction: row;
+  flex: 1;
 }
 
 .tile{
-  width: 10px;
-  background-color: blue;
-  border: 1px solid black;
-  margin: 2px;
+  
+  background-color: red;
+  border: 0.5px solid black;
+  flex: 1;
+  
 }
